--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ lto=true
 [dependencies]
 indicatif = "0.15.0"
 ureq = { version = "1.4.0", default-features = false }
-structopt = "0.3.16"
-serde = { version = "1.0.115", features = ["serde_derive"] }
+structopt = { version = "0.3.16", default-features = false }
+serde = { version = "1.0.115", features = ["derive"] }
 serde_json = "1.0.57"
 num_cpus = "1.13.0"
 rayon = { version = "1.3.1", default-features = false }
-ctrlc = "3.1.6"
 prettytable-rs = {version = "0.8.0", default-features = false }
+textwrap = { version = "0.11.0", default-features = false }
