--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [profile.release]
-lto=true
+#lto=true
+#codegen-units=1
 
 [dependencies]
 indicatif = "0.15.0"
